--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "ascii-table": "0.0.9",
     "discord.js": "^12.5.3",
+    "discord.js-pagination": "^1.0.3",
     "express": "^4.17.1",
     "leekslazylogger-express": "^0.2.0",
     "quick.db": "^7.1.3"
